--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -73,9 +73,7 @@
             </label>
             <input type="checkbox" name="conjuntos_n" id="conjuntos_n" />
           </div>
-          <p >
-            Dados básicos: 
-          </p>
+          <p>Dados básicos:</p>
           <div id="container_selecionar_tipo_vestimenta">
             <label for="Tipo_roupa">Tipo de Vestimenta:</label>
             <select name="Tipo_roupa" id="Tipo_roupa">
@@ -102,58 +100,49 @@
             </select>
           </div>
           <div id="container_tamanho_orcamento">
-            <p for="#" style="color: rgb(115, 44, 196);">Tamanho: </p>
-            <fieldset>  
-              <input type="radio" name="radio_tamanho_orcamento" id="RT1"/>
-              <label class="label_tamanho_orcamento" for="RT1" style="margin-left: 0px;"> 
-                <div>
-                  PP
-                </div>  </label>
-              <input type="radio" name="radio_tamanho_orcamento" id="RT2"/>
+            <p for="#" style="color: rgb(115, 44, 196)">Tamanho:</p>
+            <fieldset>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT1" />
+              <label
+                class="label_tamanho_orcamento"
+                for="RT1"
+                style="margin-left: 0px"
+              >
+                <div>PP</div>
+              </label>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT2" />
               <label class="label_tamanho_orcamento" for="RT2">
-                <div>
-                  P
-                </div>  </label>
-              <input type="radio" name="radio_tamanho_orcamento" id="RT3"/>
-              <label class="label_tamanho_orcamento" for="RT3"> 
-                <div>
-                  M
-                </div> </label>
-              <input type="radio" name="radio_tamanho_orcamento" id="RT4"/>
+                <div>P</div>
+              </label>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT3" />
+              <label class="label_tamanho_orcamento" for="RT3">
+                <div>M</div>
+              </label>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT4" />
               <label class="label_tamanho_orcamento" for="RT4">
-                <div>
-                  G 
-                </div> </label>
-              <input type="radio" name="radio_tamanho_orcamento" id="RT5"/>
+                <div>G</div>
+              </label>
+              <input type="radio" name="radio_tamanho_orcamento" id="RT5" />
               <label class="label_tamanho_orcamento" for="RT5">
-                <div>
-                  GG
-                </div>  </label>
+                <div>GG</div>
+              </label>
             </fieldset>
           </div>
           <p for="#">Seleção de cores:</p>
           <div id="container_cores_orçamento">
-            <label for="c1">
-              Primeira cor:
-            </label>
-            <input type="color" name="c1" id="c1">
-            <label for="c2">
-              Segunda cor:
-            </label>
-            <input type="color" name="c2" id="c2">
-            <label for="c3">
-              Terceira cor:
-            </label>
-            <input type="color" name="c3" id="c3">
+            <label for="c1"> Primeira cor: </label>
+            <input type="color" name="c1" id="c1" />
+            <label for="c2"> Segunda cor: </label>
+            <input type="color" name="c2" id="c2" />
+            <label for="c3"> Terceira cor: </label>
+            <input type="color" name="c3" id="c3" />
           </div>
-          <p >
-            Descrição dos itens: 
-          </p>
+          <p>Descrição dos itens:</p>
           <div id="container_descricao">
             <textarea
               required
               minlength="20"
-              style="display: block;"
+              style="display: block"
               autocapitalize="on"
               placeholder="Especifique no texto o tecido desejado, estampas, caimento, inspirações (Caso tenha), estilos, Etc..."
               name="descricao"
@@ -163,8 +152,18 @@
               style="resize: none"
             ></textarea>
           </div>
-          <input type="submit" value="Enviar" id="botao_enviar_orcarmento" class="botaofimorcamento">
-          <input type="reset" value="Resetar" id="botao_resetar_orcarmento" class="botaofimorcamento">
+          <input
+            type="submit"
+            value="Enviar"
+            id="botao_enviar_orcarmento"
+            class="botaofimorcamento"
+          />
+          <input
+            type="reset"
+            value="Resetar"
+            id="botao_resetar_orcarmento"
+            class="botaofimorcamento"
+          />
         </form>
       </div>
     </main>
@@ -248,10 +247,17 @@
       <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
     </div>
     <!--Creditos-->
-    <img id="creditos_toggle" src="Imagens/expandirCreditoIcon.png" alt="" title="Alterar visibilidade dos créditos">
+    <img
+      id="creditos_toggle"
+      src="Imagens/expandirCreditoIcon.png"
+      alt=""
+      title="Alterar visibilidade dos créditos"
+    />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" style="height: 0%;"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" style="height: 0%">
+        Vitorezy
+      </a>
     </footer>
   </body>
 </html>
