--- a/artistas.html
+++ b/artistas.html
@@ -102,7 +102,6 @@
       </div>
     </header>
     <main>
-      
       <h1>Tá Que Tá</h1>
       <h2>Nossos Artistas</h2>
       <div id="flex-container">
@@ -182,14 +181,14 @@
         </div>
       </div>
     </main>
-    <!--Login-->
+   <!--Página de login-->
     <div id="caixa_login" style="display: none">
       <h1 style="display: inline">Login</h1>
       <label for="fechar_login">
         <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
       /></label>
       <button id="fechar_login" style="display: none"></button>
-      <form id="formulario" method="get" action="areaUsuário.html">
+      <form id="formulario" method="post" action="areaUsuário.html">
         <label for="nome_login"
           ><img src="Imagens/inputNameIcon.png" alt="Nome"
         /></label>
@@ -214,6 +213,13 @@
           maxlength="15"
           placeholder="Digite sua senha"
         />
+        <div id="container_revelarsenha">
+          <input type="checkbox" name="" id="botaorevelarsenha" />
+          <label id="labelrevelarsenha" for="botaorevelarsenha"
+            >Revelar senha</label
+          >
+        </div>
+
         <div id="container_botoes">
           <input
             type="submit"
@@ -222,10 +228,10 @@
             style="background-color: rgb(19, 55, 219)"
           />
           <input
-            type="submit"
+            type="button"
             id="botão_criar_conta"
             value="Criar conta"
-            style="background-color: rgb(161, 0, 175)"
+            style="background-color: rgb(153, 0, 255)"
           />
           <input
             type="reset"
@@ -235,7 +241,9 @@
         </div>
         <ul id="requerimentos_login">
           <li>O nome deve estar preenchido</li>
-          <li>A senha precisa de no minímo 8 caractéres</li>
+          <li>
+            A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
+          </li>
         </ul>
       </form>
     </div>
