--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Links de acesso para outras páginas-->
-      <div class="links_acesso" style="right: 90%;">
+      <div class="links_acesso" style="right: 90%">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -52,7 +52,7 @@
             id="enviar_carrinho"
             title="carrinho de compras"
           />
-          <p id="numeroitenscarrinho"> 0 </p>
+          <p id="numeroitenscarrinho">0</p>
         </label>
 
         <div id="botão_abrir_login">
@@ -155,12 +155,19 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input class="preco_individual_peca" type="text" disabled value="50R$"> </div>
+            <div class="preco_peca">
+              <input
+                class="preco_individual_peca"
+                type="text"
+                disabled
+                value="50R$"
+              />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check2" value="94"/>
+        <input class="checkbox_pecas" type="checkbox" id="check2" value="94" />
         <div class="peca_home colecao_inverno">
           <div class="exibicao_hover_pecas">
             <label for="check2">
@@ -169,12 +176,14 @@
             <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="94R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="94R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Inverno</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check3" value="120"/>
+        <input class="checkbox_pecas" type="checkbox" id="check3" value="120" />
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check3">
@@ -183,12 +192,14 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="120R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="120R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check4" value="14"/>
+        <input class="checkbox_pecas" type="checkbox" id="check4" value="14" />
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check4">
@@ -197,12 +208,14 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="14R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="14R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de Verão</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check5" value="32"/>
+        <input class="checkbox_pecas" type="checkbox" id="check5" value="32" />
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check5">
@@ -211,12 +224,14 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="32R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="32R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de outono</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check6" value="30"/>
+        <input class="checkbox_pecas" type="checkbox" id="check6" value="30" />
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check6">
@@ -225,12 +240,14 @@
             <p title="Tamanho">GG</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="30R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de outono</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check7" value="25"/>
+        <input class="checkbox_pecas" type="checkbox" id="check7" value="25" />
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check7">
@@ -239,12 +256,19 @@
             <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="25R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="25R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check8" value="1200"/>
+        <input
+          class="checkbox_pecas"
+          type="checkbox"
+          id="check8"
+          value="1200"
+        />
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check8">
@@ -253,12 +277,14 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="1200R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="1200R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção de primavera</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check9" value="44"/>
+        <input class="checkbox_pecas" type="checkbox" id="check9" value="44" />
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check9">
@@ -267,12 +293,14 @@
             <p title="Tamanho">PP</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="44$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="44$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção Afro</p>
           </div>
         </div>
-        <input class="checkbox_pecas" type="checkbox" id="check10"value="30" />
+        <input class="checkbox_pecas" type="checkbox" id="check10" value="30" />
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check10">
@@ -281,7 +309,9 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <div class="preco_peca"> <input type="text" disabled value="30R$"> </div>
+            <div class="preco_peca">
+              <input type="text" disabled value="30R$" />
+            </div>
             <h1>Exibir coleções</h1>
             <p>Coleção Afro</p>
           </div>
@@ -296,7 +326,7 @@
         <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
       /></label>
       <button id="fechar_login" style="display: none"></button>
-      <form id="formulario" method="get" action="areaUsuário.html">
+      <form id="formulario" method="post" action="areaUsuário.html">
         <label for="nome_login"
           ><img src="Imagens/inputNameIcon.png" alt="Nome"
         /></label>
@@ -321,6 +351,13 @@
           maxlength="15"
           placeholder="Digite sua senha"
         />
+        <div id="container_revelarsenha">
+          <input type="checkbox" name="" id="botaorevelarsenha" />
+          <label id="labelrevelarsenha" for="botaorevelarsenha"
+            >Revelar senha</label
+          >
+        </div>
+
         <div id="container_botoes">
           <input
             type="submit"
@@ -332,7 +369,7 @@
             type="button"
             id="botão_criar_conta"
             value="Criar conta"
-            style="background-color: rgb(161, 0, 175)"
+            style="background-color: rgb(153, 0, 255)"
           />
           <input
             type="reset"
@@ -342,9 +379,11 @@
         </div>
         <ul id="requerimentos_login">
           <li>O nome deve estar preenchido</li>
-          <li>A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres</li>
+          <li>
+            A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
+          </li>
         </ul>
-      </form>  
+      </form>
     </div>
     <!--página de avaliação de atendimento-->
     <div id="avaliar_atendimento">
