--- a/artistas.html
+++ b/artistas.html
@@ -21,7 +21,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--links de acesso para outras páginas-->
-      <div class="links_acesso" style="right: 90%">
+      <div class="links_acesso" style="right: 89.5%">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -47,6 +47,7 @@
 
         <div id="botão_abrir_login">
           <img
+            id="imagemabrirlogin"
             src="Imagens/userIcon.png"
             alt="Botão de ir pro Usúario"
             tabindex="1"
@@ -181,7 +182,7 @@
         </div>
       </div>
     </main>
-   <!--Página de login-->
+    <!--Página de login-->
     <div id="caixa_login" style="display: none">
       <h1 style="display: inline">Login</h1>
       <label for="fechar_login">
