--- a/Quem somos.html
+++ b/Quem somos.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="Estilos/Geral.css" media="all" />
     <link rel="stylesheet" href="Estilos/quemsomos.css" />
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
-    <script defer src="Script-js/script.js"></script>
     <script defer src="Script-js/quemsomos.js"></script>
   </head>
   <body id="inicio">
@@ -18,7 +17,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Menu de acesso a outras páginas-->
-      <div class="links_acesso" style="right: 90%">
+      <div class="links_acesso" style="right:88.5%">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -43,6 +42,7 @@
         /></a>
         <div id="botão_abrir_login">
           <img
+            id="imagemabrirlogin"
             src="Imagens/userIcon.png"
             alt="Botão de ir pro Usúario"
             tabindex="1"
