alterando a estilização da página

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -17,7 +17,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Menu de acesso a outras páginas-->
-      <div class="links_acesso" style="right:88.5%">
+      <div class="links_acesso" id="linksladoesquerdo">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
