--- a/artistas.html
+++ b/artistas.html
@@ -21,7 +21,7 @@
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--links de acesso para outras páginas-->
-      <div class="links_acesso" style="right: 89.5%">
+      <div class="links_acesso" id="linksladoesquerdo">
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
@@ -57,7 +57,7 @@
       </div>
       <!--Menu suspenso-->
       <nav tabindex="1" title="Clique para abrir/fechar">
-        Filtrar por artista!
+        Navegar por artista!
       </nav>
       <div id="nav_aberta" style="height: 0%">
         <a
