--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -13,11 +13,12 @@
     <link rel="stylesheet" href="Estilos/areaUsuario.css" media="all" />
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
     <script defer src="Script-js/areaUsuario.js"></script>
+    <script defer src="Script-js/script.js"></script>
   </head>
   <body id="inicio">
     <header>
       <!--Logo-->
-      <a href="index.html">
+      <a href="Quem somos.html">
         <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
       </a>
       <!--Links de acesso para outras páginas-->
@@ -28,7 +29,21 @@
             alt="Botão de ir pro Usúario"
             title="Página inicial"
         /></a>
+        <div id="botão_abrir_login" style="display: none">
+          <img
+            id="imagemabrirlogin"
+            src="Imagens/userIcon.png"
+            alt="Botão de ir pro Usúario"
+            tabindex="1"
+            title="Usuário"
+          />
+        </div>
       </div>
+      <!--Nav com filtros para as peças da página-->
+      <nav tabindex="1" title="Clique para abrir/fechar" style="display: none">
+        Filtrar coleções!
+      </nav>
+      <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
       <!--Menu lateral-->
@@ -67,14 +82,14 @@
           <p>Faça seu orçamento conosco!</p>
         </div>
         <form action="#" method="get" id="formulario_orcamento">
-          <div id="container_conjunto">
+          <div id="container_data1">
             <label id="label_conjuntos_n" for="conjuntos_n"
               >Orçar em conjunto: Desativo
             </label>
             <input type="checkbox" name="conjuntos_n" id="conjuntos_n" />
           </div>
           <p>Dados básicos:</p>
-          <div id="container_selecionar_tipo_vestimenta">
+          <div id="container_data2">
             <label for="Tipo_roupa">Tipo de Vestimenta:</label>
             <select name="Tipo_roupa" id="Tipo_roupa">
               <option value="select">Selecione um tipo de vestimenta</option>
@@ -99,7 +114,7 @@
               </optgroup>
             </select>
           </div>
-          <div id="container_tamanho_orcamento">
+          <div id="container_data3">
             <p for="#" style="color: rgb(115, 44, 196)">Tamanho:</p>
             <fieldset>
               <input type="radio" name="radio_tamanho_orcamento" id="RT1" />
@@ -129,7 +144,7 @@
             </fieldset>
           </div>
           <p for="#">Seleção de cores:</p>
-          <div id="container_cores_orçamento">
+          <div id="container_data4">
             <label for="c1"> Primeira cor: </label>
             <input type="color" name="c1" id="c1" />
             <label for="c2"> Segunda cor: </label>
@@ -138,7 +153,7 @@
             <input type="color" name="c3" id="c3" />
           </div>
           <p>Descrição dos itens:</p>
-          <div id="container_descricao">
+          <div id="container_data5">
             <textarea
               required
               minlength="20"
@@ -167,6 +182,71 @@
         </form>
       </div>
     </main>
+    <div id="caixa_login" style="display: none">
+      <h1 style="display: inline">Login</h1>
+      <label for="fechar_login">
+        <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
+      /></label>
+      <button id="fechar_login" style="display: none"></button>
+      <form id="formulario" method="post" action="areaUsuário.html">
+        <label for="nome_login"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome"
+        /></label>
+        <input
+          type="text"
+          name="nome_login"
+          id="nome_login"
+          autocomplete="name"
+          required
+          placeholder="Digite seu nome"
+        />
+        <label for="senha_login">
+          <img src="Imagens/senhaIcon.png" alt="Senha"
+        /></label>
+        <input
+          type="password"
+          name="senha_login"
+          id="senha_login"
+          autocomplete="current-password"
+          required
+          minlength="8"
+          maxlength="15"
+          placeholder="Digite sua senha"
+        />
+        <div id="container_revelarsenha">
+          <input type="checkbox" name="" id="botaorevelarsenha" />
+          <label id="labelrevelarsenha" for="botaorevelarsenha"
+            >Revelar senha</label
+          >
+        </div>
+
+        <div id="container_botoes">
+          <input
+            type="submit"
+            id="botão_entrar_conta"
+            value="Entrar"
+            style="background-color: rgb(19, 55, 219)"
+          />
+          <input
+            type="button"
+            id="botão_criar_conta"
+            value="Criar conta"
+            style="background-color: rgb(153, 0, 255)"
+          />
+          <input
+            type="reset"
+            value="Resetar"
+            style="background-color: rgb(126, 0, 0)"
+          />
+        </div>
+        <ul id="requerimentos_login">
+          <li>O nome deve estar preenchido</li>
+          <li>
+            A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
+          </li>
+        </ul>
+      </form>
+    </div>
     <!--Avaliar suporte-->
     <div id="avaliar_atendimento">
       <h1>Avalie o atendimento!</h1>
@@ -209,7 +289,12 @@
       </div>
     </div>
     <!--BOtão de ir para o topo-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+    <a
+      id="botão-voltar"
+      href="#inicio"
+      title="Voltar para o início"
+      style="display: none"
+    >
       <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
     </a>
     <!-- Suporte-->
