--- a/Quem somos.html
+++ b/Quem somos.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
     <script defer src="Script-js/quemsomos.js"></script>
   </head>
-  <body id="inicio">
+  <body>
     <header>
       <!--Imagem logo-->
       <a href="#inicio">
@@ -53,7 +53,7 @@
     </header>
     <main>
       <!--Login-->
-      <h1>Tá Que Tá</h1>
+      <h1 id="inicio">Tá Que Tá</h1>
       <h2>Sobre Nós!</h2>
       <!--caixa que abrange toda a tela-->
       <div id="container_cards">
