--- a/artistas.html
+++ b/artistas.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
     <script defer src="Script-js/script.js"></script>
   </head>
-  <body id="inicio">
+  <body>
     <header>
       <!--Topo da página-->
       <a href="Quem somos.html">
@@ -103,7 +103,7 @@
       </div>
     </header>
     <main>
-      <h1>Tá Que Tá</h1>
+      <h1 id="inicio">Tá Que Tá</h1>
       <h2>Nossos Artistas</h2>
       <div id="flex-container">
         <!--container com as caixas de cada artista-->
