--- a/carrinho.html
+++ b/carrinho.html
@@ -9,7 +9,7 @@
     <script defer src="Script-js/carrinho.js"></script>
     <script defer src="Script-js/script.js"></script>
   </head>
-  <body id="inicio">
+  <body>
     <header>
       <!--Logo-->
       <a href="Quem somos.html">
@@ -51,7 +51,7 @@
             carrinho! isso lhe dá um total de
             <span id="valortotalfinalspan"> 0 </span>R$
           </h3>
-          <form action="#" method="post">
+          <form action="index.html" method="post">
             <div class="blocoitem">
               <label for="nomecompletodados">
                 <h1>Nome Completo</h1>
