--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="Script-js/index.js" defer></script>
     <script defer src="Script-js/script.js"></script>
   </head>
-  <body id="inicio">
+  <body >
     <header>
       <!--Logo-->
       <a href="Quem somos.html">
@@ -143,7 +143,7 @@
       </div>
     </header>
     <main>
-      <h1>Tá Que Tá</h1>
+      <h1 id="inicio">Tá Que Tá</h1>
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
       <form method="get" action="carrinho.html" id="pecas_home_container">
@@ -162,6 +162,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="50R$"
@@ -183,6 +184,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="94R$"
@@ -204,6 +206,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="120R$"
@@ -225,6 +228,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="14R$"
@@ -246,6 +250,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="32R$"
@@ -267,6 +272,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="30R$"
@@ -288,6 +294,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="25R$"
@@ -314,6 +321,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="1200R$"
@@ -335,6 +343,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="44$"
@@ -356,6 +365,7 @@
           <div class="preco_peca">
             <input
               class="preco_individual_peca"
+              name="preco_individual_peca"
               type="text"
               disabled
               value="30R$"
