--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -15,7 +15,7 @@
     <script defer src="Script-js/areaUsuario.js"></script>
     <script defer src="Script-js/script.js"></script>
   </head>
-  <body id="inicio">
+  <body>
     <header>
       <!--Logo-->
       <a href="Quem somos.html">
@@ -115,7 +115,7 @@
             </select>
           </div>
           <div id="container_data3">
-            <p for="#" style="color: rgb(115, 44, 196)">Tamanho:</p>
+            <p id="ptamanho" style="color: rgb(115, 44, 196)">Tamanho:</p>
             <fieldset>
               <input type="radio" name="radio_tamanho_orcamento" id="RT1" />
               <label
@@ -143,7 +143,7 @@
               </label>
             </fieldset>
           </div>
-          <p for="#">Seleção de cores:</p>
+          <p id="pcor">Seleção de cores:</p>
           <div id="container_data4">
             <label for="c1"> Primeira cor: </label>
             <input type="color" name="c1" id="c1" />
@@ -152,7 +152,7 @@
             <label for="c3"> Terceira cor: </label>
             <input type="color" name="c3" id="c3" />
           </div>
-          <p>Descrição dos itens:</p>
+          <p id="pdescricao">Descrição dos itens:</p>
           <div id="container_data5">
             <textarea
               required
