--- a/carrinho.html
+++ b/carrinho.html
@@ -40,7 +40,7 @@
       <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
-      <div action="index.html" id="container_itens_carrinho">
+      <div id="container_itens_carrinho">
         <div id="header_itens">
           <h1>Finalização</h1>
         </div>
