--- a/Quem somos.html
+++ b/Quem somos.html
@@ -50,6 +50,11 @@
           />
         </div>
       </div>
+      <!--Nav com filtros para as peças da página-->
+      <nav tabindex="1" title="Clique para abrir/fechar" style="display: none">
+        Filtrar coleções!
+      </nav>
+      <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
       <!--Login-->
