--- a/Quem somos.html
+++ b/Quem somos.html
@@ -57,8 +57,8 @@
       <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
-      <!--Login-->
-      <h1 id="inicio">Tá Que Tá</h1>
+      <div id="inicio" style="height: 16%;"></div>
+      <h1>Tá Que Tá</h1>
       <h2>Sobre Nós!</h2>
       <!--caixa que abrange toda a tela-->
       <div id="container_cards">
