--- a/artistas.html
+++ b/artistas.html
@@ -103,7 +103,8 @@
       </div>
     </header>
     <main>
-      <h1 id="inicio">Tá Que Tá</h1>
+      <div id="inicio" style="height: 20%;"></div>
+      <h1>Tá Que Tá</h1>
       <h2>Nossos Artistas</h2>
       <div id="flex-container">
         <!--container com as caixas de cada artista-->
