--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
       </div>
     </header>
     <main>
-      <h1 id="inicio">Tá Que Tá</h1>
+      <div id="inicio" style="height: 20%;"></div>
+      <h1>Tá Que Tá</h1>
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
       <form method="get" action="carrinho.html" id="pecas_home_container">
