--- a/Quem somos.html
+++ b/Quem somos.html
@@ -126,7 +126,7 @@
         <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
       /></label>
       <button id="fechar_login" style="display: none"></button>
-      <form id="formulario" method="post" action="areaUsuário.html">
+      <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
           ><img src="Imagens/inputNameIcon.png" alt="Nome"
         /></label>
