--- a/carrinho.html
+++ b/carrinho.html
@@ -51,7 +51,7 @@
             carrinho! isso lhe dá um total de
             <span id="valortotalfinalspan"> 0 </span>R$
           </h3>
-          <form action="index.html" method="post">
+          <form action="index.html" method="get">
             <div class="blocoitem">
               <label for="nomecompletodados">
                 <h1>Nome Completo</h1>
@@ -183,7 +183,7 @@
         <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
       /></label>
       <button id="fechar_login" style="display: none"></button>
-      <form id="formulario" method="post" action="areaUsuário.html">
+      <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
           ><img src="Imagens/inputNameIcon.png" alt="Nome"
         /></label>
